--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,9 +5,41 @@
   background-color: white;
   z-index: 1;
   padding: 15px 40px;
-  display: flex;
-  justify-content: space-between;
+
   box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.2);
+
+  .header-top {
+    display: flex;
+    justify-content: flex-end;
+
+    .translation {
+      display: flex;
+      align-items: center;
+      margin-right: 15px;
+      font-size: 20px;
+      font-weight: bold;
+      font-family: "Times New Roman", Times, serif;
+      color: #1890ff;
+
+      .icon-switch {
+        margin-left: 8px;
+      }
+
+      div:last-child {
+        border-right: 1px solid #1890ff;
+        height: 20px;
+        margin-left: 15px;
+      }
+
+      img {
+        margin-right: 8px;
+      }
+    }
+  }
+
+  .header-bottom {
+    display: flex;
+  }
 
   .image-logo {
     width: 200px;
@@ -26,10 +58,20 @@
     align-items: center;
     justify-content: center;
 
+    div {
+      border-right: 1px solid #1890ff;
+      height: 20px;
+    }
+
     a {
       font-size: 20px;
       font-weight: bold;
       font-family: "Times New Roman", Times, serif;
+
+      &:first-child {
+        line-height: 1;
+        padding-right: 15px;
+      }
 
       &:last-child {
         margin-left: 20px;
@@ -44,5 +86,18 @@
 
   .ant-menu-vertical {
     border: 0;
+  }
+
+  .ant-select-selector {
+    border: none !important;
+    box-shadow: none !important;
+    padding: 0 !important;
+  }
+
+  .ant-select-selection-item {
+    font-size: 20px !important;
+    color: #1890ff;
+    font-weight: bold;
+    padding-top: 2px !important;
   }
 }
